--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
       <artifactId>hibernate-core</artifactId>
       <version>5.5.6.Final</version> <!-- Use the latest version available -->
     </dependency>
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version> <!-- Choose the appropriate version -->
+    </dependency>
   </dependencies>
   <build>
     <finalName>DataBaseIbernat</finalName>
